--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Travel Agency Page</title>
 </head>
 <body>
-    
+    <main>
+    <h1>La bella Italia</h1>
+    </main>
 </body>
 </html>
