Add boilerplate with all tags

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Travel Agency Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-    <h1>La bella Italia</h1>
+      <h1>La bella Italia</h1>
+      <p>
+        Our Italy package tours are carefully designed to provide you with an
+        unforgettable experience where you’ll discover the best of this stunning
+        country.
+      </p>
+      <h2>Packages</h2>
+      <p>introducing the packages...</p>
+      <ul>
+        <li><a href="">Group Travels</a></li>
+        <li><a href="">Private Tours</a></li>
+      </ul>
+      <h2>Top Itineraries</h2>
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
     </main>
-</body>
+  </body>
 </html>
